# vision_visp

./: .gitignore  .gitmodules  .travis.sh  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README  README.md  events.h  logitech.hpp  main.cpp  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml  rosdep.yaml  setup.py  stack.xml  states.hpp  tracking.cpp  tracking.h  video.cpp  video.h  visp.rdmanifest  visp_auto_tracker_nodelet.xml
.travis/: after_success  before_install  build
cfg/: ModelBasedSettings.cfg  MovingEdge.cfg
cmd_line/: cmd_line.cpp  cmd_line.h
data/: config.cfg  pattern.init  pattern.wrl  pattern.xml
datamatrix/: CMakeLists.txt  detector.cpp  detector.h
detectors/: detector_base.h
examples/: simple.cpp
launch/: hrp2.launch  lagadic_grid.launch  start.launch  test.launch  track.launch  track_firewire_viewer.launch  (+9 more)
vision_visp/: CHANGELOG.rst  CMakeLists.txt  package.xml
visp_auto_tracker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
visp_auto_tracker/flashcode_mbt/: .gitignore  CMakeLists.txt  README  script.sh
visp_auto_tracker/flashcode_mbt/cmd_line/: CMakeLists.txt  cmd_line.cpp  cmd_line.h
visp_auto_tracker/flashcode_mbt/data/: config.cfg  pattern.xml
visp_auto_tracker/flashcode_mbt/detectors/: CMakeLists.txt  detector_base.cpp  detector_base.h
visp_auto_tracker/flashcode_mbt/detectors/datamatrix/: detector.cpp  detector.h
visp_auto_tracker/flashcode_mbt/detectors/qrcode/: CMakeLists.txt  detector.cpp  detector.h
visp_auto_tracker/flashcode_mbt/examples/: complex.cpp  simple.cpp
visp_auto_tracker/flashcode_mbt/libauto_tracker/: events.h  logfilewriter.hpp  states.hpp  threading.cpp  tracking.cpp  tracking.h
visp_auto_tracker/include/: autotracker.h  cmd_line.h  events.h  logfilewriter.h  names.h  states.h  tracking.h
visp_auto_tracker/launch/: tracklive_firewire.launch  tracklive_usb.launch  tracklive_usb.xml  tutorial.launch  tutorial_launch.xml
visp_auto_tracker/models/: pattern.cao  pattern.xml
visp_auto_tracker/src/: autotracker.cpp  cmd_line.cpp  main.cpp  names.cpp  names.h  node.cpp  node.h  tracking.cpp
visp_bridge/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
visp_bridge/data/: ros-camera-model-with-distortion.ini  ros-camera-model-without-distortion.ini  visp-camera-model-with-distortion.xml  visp-camera-model-without-distortion.xml
visp_bridge/include/visp_bridge/: 3dpose.h  camera.h  image.h  path_retriever.h
visp_bridge/src/: 3dpose.cpp  CMakeLists.txt  camera.cpp  image.cpp  path_retriever.cpp  vpQuaternionVector.cpp  vpQuaternionVector.h
visp_bridge/src/conversions/: 3dpose.cpp  camera.cpp  camera_tool.cpp  convert_cam_param_file.cpp
visp_bridge/tool/: CMakeLists.txt  cam_param_converter.cpp  convert_cam_param_file.cpp
visp_camera_calibration/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
visp_camera_calibration/include/visp_camera_calibration/: calibrator.h  camera.h  image_processing.h  names.h  visibility.h
visp_camera_calibration/launch/: lagadic_grid.launch
visp_camera_calibration/launch/images/: grid36-01.pgm  grid36-04.pgm
visp_camera_calibration/msg/: CalibPoint.msg  ImageAndPoints.msg  ImagePoint.msg
visp_camera_calibration/src/: calibrator.cpp  calibrator.h  calibrator_main.cpp  camera.cpp  camera.h  camera_main.cpp  image_processing.cpp  image_processing.h  image_processing_main.cpp  names.cpp
visp_camera_calibration/srv/: Calibrate.srv  calibrate.srv
visp_hand2eye_calibration/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  manifest.xml  package.xml
visp_hand2eye_calibration/include/visp_hand2eye_calibration/: calibrator.h  client.h  names.h  visibility.h
visp_hand2eye_calibration/msg/: TransformArray.msg
visp_hand2eye_calibration/src/: calibrator.cpp  calibrator.h  calibrator_main.cpp  client.cpp  client_main.cpp  names.cpp  names.h
visp_hand2eye_calibration/srv/: ComputeEffectorCamera.srv  ComputeEffectorCameraQuick.srv
visp_megapose/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
visp_megapose/launch/: megapose_client.launch  megapose_client_dnn.launch  megapose_server.launch
visp_megapose/scripts/: megapose_server_.py  megapose_variables_final.json
visp_megapose/src/: megapose_client.cpp  megapose_client_.cpp
visp_megapose/srv/: Init.srv  Render.srv  Track.srv
visp_tracker/: .clang-format  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  calibration.ini  manifest.xml  package.xml
visp_tracker/cfg/: ModelBasedSettings.cfg  ModelBasedSettingsEdge.cfg  ModelBasedSettingsKlt.cfg
visp_tracker/include/visp_tracker/: callbacks.h  conversion.h  file.h  names.h  tracker-client.h  tracker-mbt.h  tracker-viewer.h
visp_tracker/launch/: tutorial-multi-fuerte.launch  tutorial-multi.launch  tutorial-nodelet.launch  tutorial.launch  tutorial_launch.xml
visp_tracker/launch/flea2/: flea2.yaml
visp_tracker/launch/hrp2014/: camera-nodelet.launch  narrow_left.yaml  wide_left.yaml  wide_right.yaml
visp_tracker/launch/hrp2014/calibration/: narrow_left.yaml  narrow_right.yaml  wide_left.yaml
visp_tracker/launch/uvc/calibration/: uvc.yaml
visp_tracker/models/floppy-box/: floppy-box.ac  floppy-box.ppm  floppy-box.wrl
visp_tracker/models/laas-box/: laas-box.cao  laas-box.init  laas-box.wrl  tracker.yaml
visp_tracker/models/shelf/: shelf.ac  tracker.yaml
visp_tracker/msg/: KltPoints.msg  KltSettings.msg  MovingEdgeSettings.msg  MovingEdgeSite.msg  MovingEdgeSites.msg  TrackerSettings.msg
visp_tracker/scripts/: tf_localization.py
visp_tracker/src/libvisp_tracker/: callbacks.cpp  callbacks.hh  conversion.cpp  conversion.hh  file.cpp  file.hh  names.cpp  names.hh  tracker-client.cpp  tracker-client.hh  tracker-viewer.cpp  tracker-viewer.hh  tracker.cpp  tracker.hh
visp_tracker/src/nodelets/: client.cpp  tracker.cpp  viewer.cpp
visp_tracker/src/nodes/: client.cpp  mbt.cpp  tracker.cpp  viewer.cpp
visp_tracker/src/visp_tracker/: callbacks.cpp  conversion.cpp  file.cpp  names.cpp  tracker-client.cpp  tracker-mbt.cpp  tracker-viewer.cpp
visp_tracker/srv/: Init.srv
(+117 files in other folders)
