<?xml version="1.0"?>
<package>
  <name>visp_auto_tracker</name>
  <version>0.13.1</version>

  <description>
    Online automated pattern-based object tracker relying on visual servoing.

    visp_auto_tracker wraps model-based trackers provided by ViSP visual
    servoing library into a ROS package. The tracked object should have a
    QRcode, Flash code, or April tag pattern. Based on the pattern, the object is
    automaticaly detected. The detection allows then to initialise the
    model-based trackers. When lost of tracking achieves a new detection
    is performed that will be used to re-initialize the tracker.

    This computer vision algorithm computes the pose (i.e. position and
    orientation) of an object in an image. It is fast enough to allow
    object online tracking using a camera.
  </description>
  <author>Filip Novotny</author>
  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>
  <license>GPLv2</license>
  <url>http://wiki.ros.org/visp_auto_tracker</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>libdmtx-dev</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- catkin_lint produce an error arround build_depend visp. -->
  <!-- This error shouldn't be considered. If build_depend visp is removed, -->
  <!-- the package is not able to build on ros buildfarm. -->
  <build_depend>visp</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>visp_tracker</build_depend>
  <build_depend>zbar</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>libdmtx-dev</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visp</run_depend>
  <run_depend>visp_bridge</run_depend>
  <run_depend>visp_tracker</run_depend>
  <run_depend>zbar</run_depend>
  <run_depend>usb_cam</run_depend>
</package>
